--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,11 @@
-# references:
-# * https://www.objc.io/issues/6-build-tools/travis-ci/
-# * https://github.com/supermarin/xcpretty#usage
+language:
+  - swift
 
 osx_image: xcode11
-language: swift 
-# cache: cocoapods
-# podfile: Example/Podfile
-# before_install:
-# - gem install cocoapods # Since Travis is not always on latest version
-# - pod install --project-directory=Example
-script:
-- set -o pipefail && xcodebuild test -enableCodeCoverage YES -workspace Example/SwiftyDeck.xcworkspace -scheme SwiftyDeck-Example -sdk iphonesimulator11.0 ONLY_ACTIVE_ARCH=NO | xcpretty
-- pod lib lint
+
+xcode_project: SwiftyDeck.xcodeproj # path to your xcodeproj folder
+xcode_scheme: SwiftyDeck_Tests
+xcode_destination: platform=iOS Simulator,name=iPhone X,OS=12.1
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
