--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language:
 
 osx_image: xcode11
 
-xcode_project: SwiftyDeck.xcodeproj # path to your xcodeproj folder
+xcode_project: Example/SwiftyDeck.xcodeproj # path to your xcodeproj folder
 xcode_scheme: SwiftyDeck_Tests
 xcode_destination: platform=iOS Simulator,name=iPhone X,OS=12.1
 
