--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ xcode_scheme: SwiftyDeck-Example
 xcode_destination: platform=iOS Simulator,name=iPhone X,OS=12.1
 
 before_install:
-  - pod repo update
-  
+  - pod install --project-directory=Example
+
 after_success:
   - bash <(curl -s https://codecov.io/bash)
