--- a/.travis.yml
+++ b/.travis.yml
@@ -2,14 +2,15 @@ language:
   - swift
 
 osx_image: xcode11
-podfile: Example/Podfile
+
+before_install:
+  - pod repo update
+  - pod install --project-directory=Example
 
 xcode_project: Example/SwiftyDeck.xcodeproj # path to your xcodeproj folder
 xcode_scheme: SwiftyDeck-Example
 xcode_destination: platform=iOS Simulator,name=iPhone X,OS=12.1
 
-before_install:
-  - pod install --project-directory=Example
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
