--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,9 @@ language:
 
 osx_image: xcode11
 
-before_install:
-  - pod repo update
-  - pod install --project-directory=Example
+# before_install:
+#  - pod repo update
+#  - pod install --project-directory=Example
 
 xcode_workspace: Example/SwiftyDeck.xcworkspace # path to your xcodeproj folder
 xcode_scheme: SwiftyDeck-Example
