--- a/Example/SwiftyDeck.xcodeproj/xcshareddata/xcschemes/SwiftyDeck-Example.xcscheme
+++ b/Example/SwiftyDeck.xcodeproj/xcshareddata/xcschemes/SwiftyDeck-Example.xcscheme
@@ -54,7 +54,18 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      codeCoverageEnabled = "YES"
+      onlyGenerateCoverageForSpecifiedTargets = "YES"
       shouldUseLaunchSchemeArgsEnv = "YES">
+      <CodeCoverageTargets>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "8129A9A5EE376A14008B07401912BC2D"
+            BuildableName = "SwiftyDeck.framework"
+            BlueprintName = "SwiftyDeck"
+            ReferencedContainer = "container:Pods/Pods.xcodeproj">
+         </BuildableReference>
+      </CodeCoverageTargets>
       <Testables>
          <TestableReference
             skipped = "NO">
